<resources>
    <string name="app_name">ZSU Driver</string>
    <string name="date_add_button">add date</string>
    <string name="send_button_label">send date</string>
    <string name="date">date</string>
    <string name="waybill_number">number</string>
    <string name="km_before">km before</string>
    <string name="km_after">km after</string>
    <string name="km_day">km day</string>
    <string name="fuel_before">fuel before</string>
    <string name="fuel_after">fuel after</string>
    <string name="fuel_add">fuel add</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_journal_item">add item</string>
    <string name="title_activity_journal">Waybill Journal</string>
    <string name="fuel_consumption">fuel consumption</string>
    <string name="btn_unit_journal">car journal</string>
    <string name="accumDateLb">accum date</string>
    <string name="engNmbLb">engNmb</string>
    <string name="carcasNmbViewLb">carcasNmb</string>
    <string name="carName">carName</string>
    <string name="carType">carType</string>
    <string name="tyresDate">tyresDate</string>
    <string name="tyresNmbs">tyresNmbs</string>
    <string name="carVn">carVn</string>
    <string name="editCar">edit car</string>
    <string name="carJournal">waybills</string>
    <string name="error_msg">error</string>
    <string name="accumTypeLbl">battery type</string>
    <string name="long_tap_to_edit">long tap to edit</string>
</resources>
