<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numberTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waybill_number" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kmBeforeTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_before" />

        <TextView
            android:id="@+id/kmBeforeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kmAfterTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_after" />

        <TextView
            android:id="@+id/kmAfterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kmDayTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_day" />

        <TextView
            android:id="@+id/kmDayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelBeforeTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_before" />

        <TextView
            android:id="@+id/fuelBeforeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelAddTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_add" />

        <TextView
            android:id="@+id/fuelAddTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelConsumptTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_consumption" />

        <TextView
            android:id="@+id/fuelConsumptTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelAfterTextViewLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_after" />

        <TextView
            android:id="@+id/fuelAfterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>