<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.pp.myprojects.zsudriver.activities.JournalActivity"
    tools:showIn="@layout/activity_journal">

    <TextView
        android:id="@+id/accumDateLb"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/date"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/engNmbLb"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/waybill_number"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/accumDateLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carcasNmbViewLb"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/km_before"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/engNmbLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carNameViewLb"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/km_after"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/carcasNmbViewLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carTypeViewLb"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/km_day"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/carNameViewLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accumDate"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accumDateLb" />

    <TextView
        android:id="@+id/engNmbView"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/accumDate"
        app:layout_constraintTop_toBottomOf="@+id/engNmbLb" />

    <TextView
        android:id="@+id/carNameView"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/carcasNmbView"
        app:layout_constraintTop_toBottomOf="@+id/carNameViewLb" />

    <TextView
        android:id="@+id/carcasNmbView"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/engNmbView"
        app:layout_constraintTop_toBottomOf="@+id/carcasNmbViewLb" />

    <TextView
        android:id="@+id/carTypeView"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/carNameView"
        app:layout_constraintTop_toBottomOf="@+id/carTypeViewLb" />

    <TextView
        android:id="@+id/tyresDateLbl"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fuel_before"
        android:textAlignment="center"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/accumDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tyresDateView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tyresDateLbl"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tyresNmbsLbl"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fuel_add"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/carcasNmbView"
        app:layout_constraintLeft_toRightOf="@+id/tyresDateLbl"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/tyresNmbsView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tyresNmbsLbl"
        app:layout_constraintLeft_toRightOf="@+id/tyresDateView"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/vnLbl"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fuel_after"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/carTypeView"
        app:layout_constraintLeft_toRightOf="@+id/tyresNmbsLbl"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/fuelAfterView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tyresNmbsView"
        app:layout_constraintTop_toBottomOf="@+id/vnLbl" />

</android.support.constraint.ConstraintLayout>
